samples/_failures_safe/1761179141_30fe3a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6114894a.c: In function ‘main’:
./samples/SAFE/__tmp_6114894a.c:146:5: error: expected expression at end of input
  146 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_6114894a.c:146:5: error: expected declaration or statement at end of input
